<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view"
    >

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profilevector"
        android:title="@string/profile"
        />
    <item
        android:id="@+id/Chng_flng"
        android:icon="@drawable/ic_changemood"
        android:title="Change Feeling"
        />

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        />
    <item
        android:id="@+id/help"
        android:icon="@drawable/ic_help"
        android:title="@string/help"
        />
    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_aboutus"
        android:title="@string/about_us"

        />
    <item
        android:id="@+id/exit"
        android:icon="@drawable/ic_exit"
        android:title="@string/sign_out"
        />

</menu>